--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
+    "eslint": "^7.27.0",
+    "eslint-plugin-react": "^7.24.0",
     "nodemon": "^2.0.7"
   },
   "scripts": {
